Terminal: Fix flushing after process has finished

Fixes: QTCREATORBUG-30733
Change-Id: I4b6274d15efbd1b2e6c8ea4960683a4f6bc8952e
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>