src/libs/utils/qtcprocess.cpp
@@ -435,13 +435,22 @@ public:
                     static_cast<Pty::PtyInputFlag>(m_inputFlags.toInt()));
             }
 
-            emit readyRead(m_ptyProcess->readAll(), {});
+            const QByteArray data = m_ptyProcess->readAll();
+            if (!data.isEmpty())
+              emit readyRead(data, {});
         });
 
         connect(m_ptyProcess->notifier(), &QIODevice::aboutToClose, this, [this] {
             if (m_ptyProcess) {
                 const ProcessResultData result
                     = {m_ptyProcess->exitCode(), QProcess::NormalExit, QProcess::UnknownError, {}};
+
+                const QByteArray restOfOutput = m_ptyProcess->readAll();
+                if (!restOfOutput.isEmpty()) {
+                    emit readyRead(restOfOutput, {});
+                    m_ptyProcess->notifier()->disconnect();
+                }
+
                 emit done(result);
                 return;
             }
